# bevy_procedural_grass

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
assets/: normal.wgsl
assets/meshes/: grass_blade.blend  grass_blade.blend1  grass_blade.glb  grass_blade.gltf  grass_blade_flipped.glb  grass_blade_test.glb  grass_blade_thin.glb  grass_blade_uv.glb
assets/shaders/: grass.wgsl  grass_compute.wgsl  instancing.wgsl
examples/: demo.rs  grass.rs  inspect.rs  sphere.rs  test.rs
src/: lib.rs  main.rs  node.rs  pipeline.rs  prefix_sum.rs  prepare.rs  terrain.rs
src/assets/shaders/: grass.wgsl
src/grass/: chunk.rs  clump.rs  compute_pipeline.rs  config.rs  cull.rs  displacement.rs  draw.rs  extract.rs  grass.rs  ground_mesh.rs  interactable.rs  material.rs  mesh.rs  mod.rs  pipeline.rs  prepare.rs  queue.rs  wind.rs
src/precompute/: mod.rs  node.rs  pipeline.rs  prepare.rs
src/procedural_grass/: grass.rs  mod.rs  terrain.rs
src/render/: compute.rs  compute_mesh.rs  draw.rs  draw_node.rs  extract.rs  gpu_scene.rs  instance.rs  mesh_asset.rs  mod.rs  node.rs  pipeline.rs  prepare.rs  queue.rs
src/shaders/: compact.wgsl  compute_chunks.wgsl  compute_grass.wgsl  compute_sps_grass.wgsl  counts.wgsl  dispatch_counts.wgsl  expand.wgsl  grass.wgsl  grass_cull.wgsl  grass_fragment.wgsl  grass_prepass.wgsl  grass_types.wgsl  grass_util.wgsl  grass_vertex.wgsl  reset_args.wgsl  scan.wgsl  scan_blocks.wgsl
src/terrain/: component.rs  mod.rs
src/util/: aabb.rs  mod.rs
