[package]
name = "bevy_procedural_grass"
version = "0.1.1"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "grass"]
repository = "https://github.com/jadedbay/bevy_procedural_grass/"
description = "A plugin for bevy to generate grass"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy-inspector-egui = { version = "0.21.0", optional = true }
bytemuck = "1.14.0"
noise = "0.8.2"
rand = "0.8.5"

[dependencies.bevy]
version = "0.12.1"
default-features = false
features = [ "bevy_core_pipeline", "bevy_render", "bevy_asset", "bevy_pbr" ]

[dependencies.image]
version = "0.24.7"
features = ["png", "jpeg"]

[dev-dependencies]
bevy_flycam = "0.12.0"
bevy = { version = "0.12.1", default-features = false, features = ["bevy_winit", "x11", "tonemapping_luts"] }

[features]
bevy-inspector-egui = ["dep:bevy-inspector-egui"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[[example]]
name = "inspect"
required-features = ["bevy-inspector-egui"]